<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Address Book Sample</string>
    <string name="action_settings">Settings</string>
    <string name="action_newContact">New Contact</string>
    <string name="action_createContact">Create Contact</string>
    <string name="action_saveContact">Save Contact</string>
    <string name="action_updateContactnInfo">Update </string>
    <string name="action_updateMyInfo">Update MyInfo</string>
    <string name="action_logout">Logout</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_contact_list">Address Book Sample</string>
    <string name="title_activity_user_consent">UserConsentActivity</string>
    <string name="title_activity_all_contacts">AllContacts</string>
    <string name="title_activity_all_groups">Groups</string>
    <string name="title_activity_contact_details">ContactDetails</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="Groups">Groups</string>
    <string name="Search">Search</string>
    <string name="settings">Settings</string>
    <string name="FirstName">FirstName</string>
    <string name="LastName">LastName</string>
    <string name="PhoneNumber">Phone</string>
    <string name="EmailAddress">Email Address</string>
    <string name="Address">Address</string>
    <string name="Address2">Address2</string>
    <string name="City">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="zipCode">ZipCode</string>
    <string name="showGroups">Show Groups</string>
    <string name="title_activity_contact_group_list">ContactGroupList</string>
    <string name="title_activity_group_contact_list">GroupContactList</string>
    <string name="title_close_application">"Closing the Application"</string>
    <string name="title_debug_settings">"Debug Settings"</string>   
    <string name="action_debug_settings">"Debug Settings"</string>   
    <string name="title_access_token">"Access Token:"</string>
    <string name="title_refresh_token">"Refresh Token:"</string>
    <string name="title_access_token_expiry">"Token Expires in:"</string>
    <string name="title_clear_preferences">"Clear Preferences"</string>
    <string name="title_clear_cookies">"Clear Cookies"</string>
    <string name="title_apply">"Apply"</string>
    <string name="title_cancel">"Cancel"</string>
    <string name="title_bypass_on_net">"By pass on-network"</string>
    <string name="title_suppress_landing_page">"Suppress landing page"</string>
    <string name="title_revoke_access_token">"Revoke access token"</string>
    <string name="title_revoke_refresh_token">"Revoke refresh token"</string>
</resources>
