<menu xmlns:android="http://schemas.android.com/apk/res/android" >

     
     <item
        android:id="@+id/action_new"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_newContact"/>
    
    <item
        android:id="@+id/action_update"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_updateMyInfo"/>
    
    <item
        android:id="@+id/action_debug_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_debug_settings"/>
    
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_logout"/>

</menu>
