<?xml version="1.0" encoding="utf-8"?>

 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ScrollView01"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:scrollbars="none" >

  
       <LinearLayout
          
           android:layout_width="match_parent"
           android:layout_height="427dp" >

	<RelativeLayout
  	  android:layout_width="match_parent"
   	  android:layout_height="548dp" >

    
    <ImageButton
        android:id="@+id/photoImage"
        android:layout_width="wrap_content"
        android:layout_height="108dp"
        android:layout_alignParentLeft="true"
        android:src="@android:drawable/btn_star" />

    <TextView
        android:id="@+id/First"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/photoImage"
        android:layout_marginTop="24dp"
        android:layout_toRightOf="@+id/photoImage"
        android:text="@string/FirstName" />

    <TextView
        android:id="@+id/Last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/First"
        android:layout_below="@+id/First"
        android:layout_marginTop="18dp"
        android:layout_toRightOf="@+id/photoImage"
        android:text="@string/LastName" />

    <EditText
        android:id="@+id/editfirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Last"
        android:layout_alignParentRight="true"
        android:inputType="text"
        android:ems="10" />

    <EditText
        android:id="@+id/editlastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Last"
        android:layout_alignBottom="@+id/Last"
        android:layout_alignLeft="@+id/editfirstName"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/orgName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/photoImage"
        android:layout_marginTop="30dp"
        android:text="@string/Organization"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editorgName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/orgName"
        android:layout_alignParentRight="true"
        android:inputType="text"
        android:ems="10" />


    
    <TextView
        android:id="@+id/PhoneType1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/orgName"
        android:layout_marginTop="28dp"
        android:text="@string/PhoneType1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editPhoneType1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/PhoneType1"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/PhoneType2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/PhoneType1"
        android:layout_marginTop="28dp"
        android:text="@string/PhoneType2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editPhoneType2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/PhoneType2"
        android:layout_alignLeft="@+id/editPhoneType1"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/emailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/PhoneType2"
        android:layout_below="@+id/PhoneType2"
        android:layout_marginTop="16dp"
        android:text="@string/EmailAddress"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editEmailAdddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/emailAddress"
        android:layout_alignBottom="@+id/emailAddress"
        android:layout_alignLeft="@+id/editlastName"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editEmailAdddress"
        android:layout_marginTop="15dp"
        android:text="@string/Address"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/address"
        android:layout_toRightOf="@+id/emailAddress"
        android:ems="10"
        android:inputType="textPostalAddress" />
    
    <TextView 
        android:id="@+id/address2"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_below="@+id/editAddress"
        android:layout_marginTop="15dp"
        android:text="@string/Address2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editAddress2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/address2"
        android:layout_alignLeft="@+id/editPhoneType2"
        android:ems="10"
        android:inputType="textPostalAddress" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/address2"
        android:layout_marginTop="16dp"
        android:text="@string/City"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/city"
        android:layout_alignBottom="@+id/city"
        android:layout_toRightOf="@+id/PhoneType2"
        android:ems="10"
        android:hint="@string/City" />
     <TextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/city"
        android:layout_marginTop="16dp"
        android:text="@string/state"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/state"
        android:layout_alignBottom="@+id/state"
        android:layout_toRightOf="@+id/PhoneType2"
        android:hint="@string/state" />

        <TextView
        android:id="@+id/zipCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/state"
        android:text="@string/zipCode"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editzipCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/zipCode"
        android:layout_alignBottom="@+id/zipCode"
        android:layout_toRightOf="@+id/PhoneType2"
        android:hint="@string/zipCode" />
    
     <TextView
         android:id="@+id/country"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/zipCode"
		android:text="@string/country"
		android:textAppearance="?android:attr/textAppearanceMedium" />
     
     <EditText
		android:id="@+id/editCountry"
		 android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/country"
        android:layout_alignBottom="@+id/country"
        android:layout_toRightOf="@+id/PhoneType2"
        android:hint="@string/country" />
        
        
		
    <Button
        android:id="@+id/btnshowgroups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editlastName"
        android:layout_above="@+id/editorgName"
        android:layout_toRightOf="@+id/Last"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:text="@string/showGroups" />
            
</RelativeLayout>
</LinearLayout>
  </ScrollView>
